maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:32: error: value Ouest is not a member of object plm.universe.Direction
      dir = Direction.Ouest; ind=getIndication(getX()+1,getY())}
                      ^